--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -8,11 +8,11 @@ mini-toc-levels: 2
 source-git-commit: 264ad6eeeb05af620941cd57ceaf18c82faf019e
 workflow-type: tm+mt
 source-wordcount: '5766'
-ht-degree: 94%
+ht-degree: 99%
 
 ---
 
-# Experience Cloud 版本注意事項 - 2023 年 4 月
+# Experience Cloud 發行說明 - 2023 年 4 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -26,14 +26,14 @@ ht-degree: 94%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/?lang=en#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=en)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/?lang=en#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/?lang=en#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/?lang=en#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
 上次更新日期：**2023 年 4 月 18 日**
 
 * [[!DNL Experience League] 活動](#events)
-* [Adobe 認證](#certification)(**新增！**)
+* [Adobe 認證](#certification) (**新增！**)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Experience Cloud] 介面與管理](#ecloud)
 * [[!DNL Experience Platform]](#platform)
@@ -57,33 +57,33 @@ ht-degree: 94%
 
 了解 Experience League 的最新消息。若要向 Adobe 產品專家學習、與之互動或獲得解答，活動是您絕佳的選擇！
 
-已更新： **2023年4月19日**
+上次更新日期：**2023 年 4 月 19 日**
 
 +++即將到來的活動
 
-* **[!DNL Workfront]** | _詢問專家：透過自動化網路研討會後續活動推進工作流程清理_ | **4月27日上午10點30分（手動）** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,pUGUw4e8dEaYTwHasipYnw,Qp_LrlOtoUKguf3gH4x3HQ,zWCOgeSX_Uy_Zmp7d-ZbTQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]** | _詢問專家：透過自動化提升工作流程清理網路研討會後續追踪_ | **4 月 27 日上午 10:30 (北美山區時區)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,pUGUw4e8dEaYTwHasipYnw,Qp_LrlOtoUKguf3gH4x3HQ,zWCOgeSX_Uy_Zmp7d-ZbTQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Experience Manager Sites]** | _AEM Sites增壓車間_ | **4月25日早8點00分（品脫）** |  [註冊](https://adobe.ly/3ZV8gUG)
+* **[!DNL Experience Manager Sites]** | _AEM Sites Supercharger 研討會_ | **4 月 25 日上午 8:00 (太平洋時間)** | [報名](https://adobe.ly/3ZV8gUG)
 
-* **[!DNL Experience Platform]** | _只需按幾下，即可啟動資料收集和事件轉送並執行！_ | **4月25日上午9點** | [註冊](https://engage.adobe.com/ExpLeagueLive-230425.html)
+* **[!DNL Experience Platform]** | _只需點按幾下即可啟動並執行資料收集和事件轉送！_ | **4 月 25 日上午 9:00 (太平洋時間)** | [報名](https://engage.adobe.com/ExpLeagueLive-230425.html)
 
-* **[!DNL Marketo Engage]** | _Marketo冠軍深入探討：電子郵件培養_ | **4月25日上午10點00分PT** | [註冊](https://mugs.marketo.com/events/details/marketo-adobe-deep-dive-mug-presents-marketo-champion-deep-dive-email-nurture/)
+* **[!DNL Marketo Engage]** | _Marketo Champion 深入分析：電子郵件培養_ | **4 月 25 日上午 10:00 (太平洋時間)** | [報名](https://mugs.marketo.com/events/details/marketo-adobe-deep-dive-mug-presents-marketo-champion-deep-dive-email-nurture/)
 
-* **[!DNL Experience Manager as a Cloud Service]** | _AEM Champion營業時間 — AEMas a Cloud Service_ | **4月27日早7時30分（太平）** | [註冊](https://aem-augs.adobe.com/events/details/adobe-experience-manager-aem-champion-office-hours-presents-adobe-experience-manager-champion-office-hours-aem-as-a-cloud-service/)
+* **[!DNL Experience Manager as a Cloud Service]** | _AEM Champion 營業時間 - AEM as a Cloud Service_ | **4 月 27 日上午 7:30 (太平洋時間)** | [報名](https://aem-augs.adobe.com/events/details/adobe-experience-manager-aem-champion-office-hours-presents-adobe-experience-manager-champion-office-hours-aem-as-a-cloud-service/)
 
-* **[!DNL Analytics]** | _建立Adobe Analytics專家團隊_ | **4月27日早8點00分（品脫）** | [註冊](https://engage.adobe.com/Building_an_analytics_team.html?utm_source=experienceleague)
+* **[!DNL Analytics]** | _建立 Adobe Analytics 專家團隊_ | **4 月 27 日上午 8:00 (太平洋時間)** | [報名](https://engage.adobe.com/Building_an_analytics_team.html?utm_source=experienceleague)
 
-* **[!DNL Target]** | _Adobe Target — 每次都提供個人化客戶體驗！_ | **4月27日英國夏令時早9點** | [註冊](https://adobetargetemea2023.experienceleague.adobeevents.com/)
+* **[!DNL Target]** | _Adobe Target - 每次都提供個人化的客戶體驗！_ | **4 月 27 日上午 9:00 (英國夏令時間)** | [](https://adobetargetemea2023.experienceleague.adobeevents.com/)
 
-* **[!DNL Adobe Summit]**|_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
+* **[!DNL Adobe Summit]** |_全年重訪 Summit！_ | **隨選即播** | [詳細資訊](https://business.adobe.com/summit/adobe-summit.html)
 
-請查看[Experience League 活動](https://experienceleague.adobe.com/events/?lang=en)取得即將到來的活動和隨選即播的過去活動的完整時間表。
+請查看 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=en)取得即將到來的活動和隨選即播的過去活動的完整時間表。
 
 +++
 
 ## ![圖示](/assets/certification-badge.png)認證{#certification}
 
-請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)網站。
+請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)網站。
 
 +++詳細資訊
 
@@ -93,7 +93,7 @@ ht-degree: 94%
 * Adobe 解決方案的認證續約
 * 認證方案更新
 
-及更多內容！前往 Experience League 上的[Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=en)，立即開始您的認證之旅！
+及更多內容！前往 Experience League 上的 [Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)，立即開始您的認證之旅！
 
 +++
 
@@ -117,13 +117,13 @@ ht-degree: 94%
 
 _在 4 月未更新。_
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象]).
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找[!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -207,7 +207,7 @@ New video tutorials, articles, and courses published for Adobe Analytics.
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [將新資料加入到  [!DNL Customer Journey Analytics] 中的連線](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/add-past-data-to-an-existing-connection-in-cja.html?lang=en) | 已更新的影片 | 了解如何從其他管道將新資料加入到 [!DNL Customer Journey Analytics] 連線以從分析中獲得更多價值。此外，了解合併此新資料的要求，以及對使用組態設定解決之分析和報告的影響。 |
+| 2023 年 4 月 | [將新資料加入到  [!DNL Customer Journey Analytics] 中的連線](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/connections/add-past-data-to-an-existing-connection-in-cja.html?lang=zh-Hant) | 已更新的影片 | 了解如何從其他管道將新資料加入到 [!DNL Customer Journey Analytics] 連線以從分析中獲得更多價值。此外，了解合併此新資料的要求，以及對使用組態設定解決之分析和報告的影響。 |
 | 2023 年 4 月 | [在  [!DNL Customer Journey Analytics] 中設定遺漏的人員 ID](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/visitor-id/configure-missing-person-id.html) | 影片 | 了解如何處理沒有人員 ID 可設定的資料集。 |
 
 {style="table-layout:auto"}
@@ -257,8 +257,8 @@ _未更新。_
 Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
 
 * [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
-* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant) - 觀看目前和過去版本的[!DNL Experience Manager as a Cloud Service]專題影片概述。
-* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant) - 閱讀 [!DNL Experience Manager as a Cloud Service]最新發行說明。
+* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概述。
+* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant) - 閱讀 [!DNL Experience Manager as a Cloud Service] 最新發行說明。
 
 ### 最新版本概觀影片
 
@@ -268,13 +268,13 @@ Adobe 建議您瀏覽以下資源以隨時掌握發行版本資訊：
 
 _新功能_
 
-* [!DNL Experience Manager] GraphQL 內容傳遞 API 現在支援 GraphQL [分頁](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=en#paging)和[排序](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=en#sorting)，以提高擷取和呈現大型內容集的效率。GraphQL 分頁以子集傳回結果而非一次全部傳回來縮短查詢回應時間。GraphQL 排序使您可以按所需順序放置內容集，從而使用戶端應用程式更容易處理內容。[!DNL Experience Manager] GraphQL 引擎中的混合篩選可進一步改進查詢回應時間。現在以與查詢篩選器相對應的較小集合的形式從 JCR 讀取內容。
+* [!DNL Experience Manager] GraphQL 內容傳遞 API 現在支援 GraphQL [分頁](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=zh-Hant#paging)和[排序](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/headless/graphql-api/content-fragments.html?lang=zh-Hant#sorting)，以提高擷取和呈現大型內容集的效率。GraphQL 分頁以子集傳回結果而非一次全部傳回來縮短查詢回應時間。GraphQL 排序使您可以按所需順序放置內容集，從而使用戶端應用程式更容易處理內容。[!DNL Experience Manager] GraphQL 引擎中的混合篩選可進一步改進查詢回應時間。現在以與查詢篩選器相對應的較小集合的形式從 JCR 讀取內容。
 
 ### [!DNL Experience Manager Assets] as a [!DNL Cloud Service]
 
 _新功能_
 
-* 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html?lang=en)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
+* 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html?lang=zh-Hant)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
 * [!DNL Experience Manager Assets]除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html?lang=zh-Hant#asset-bulk-ingestor)。
 * 改進 Asset Compute 中 CMYK 影像的管理，讓您可以為 CMYK 影像產生智慧型裁切和智慧型標記。
 
@@ -286,20 +286,20 @@ _發行前管道中可用的新功能_
 
 _新功能_
 
-* **[可產生非互動式 PDF 文件和可列印輸出的工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=en)** - 使用 [!DNL Experience Manager] 工作流程步驟，將業務流程的非互動式 PDF 文件和可列印輸出建立工作自動化，簡化您文件產生程序並節省時間。
-* **[使用腳註在調適型表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html?lang=en)** - 在調適型表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
+* **[可產生非互動式 PDF 文件和可列印輸出的工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html?lang=zh-Hant)** - 使用 [!DNL Experience Manager] 工作流程步驟，將業務流程的非互動式 PDF 文件和可列印輸出建立工作自動化，簡化您文件產生程序並節省時間。
+* **[使用腳註在最適化表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html?lang=zh-Hant)** - 在最適化表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
 
 
 _發行前管道中可用的新功能_
 
-* [使用資料擷取核心元件以建置調適型表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html?lang=en) – [使用調適型表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html?lang=en)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
-* [前端管道支援設計以核心元件為基礎之調適型表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=en) – 通過使用前端部署管道部署，為以核心元件為基礎之調適型表單使用易於自訂的 BEM 型主題，以增強表單的外觀和風格。
-* [為以核心元件為基礎之調適型表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=en) – 為以核心元件為基礎之調適型表單建立記錄，以提交供長期封存，採列印或文件格式。
-* [將調適型表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html?lang=en) – 簡化資料提交作業，能夠將調適型表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
-* [使用將調適型表單另存為模板功能來提升表單建置效率](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html?lang=en#save-an-adaptive-form-as-template-saving-adaptive-form-as-template) – 將調適型表單另存為模板，並在建置下一個調適型表單時重複使用模板，藉此簡化表單建置程序。
-* [連接 [!DNL Experience Manager Forms] 到支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=en#configure-relational-database-configure-relational-database) – 輕鬆連接將 [!DNL Experience Manager Forms] 資料模型連接到支援 JDBC 的資料庫，讓您順暢讀寫資料。
-* [使用 Open API 3.0 與 REST 端點相整合](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=en#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30) – 將 [!DNL Experience Manager Forms] as a [!DNL Cloud Service] 表單資料模型連接到支援 Open API 規格版格 3.0 的 REST 端點，讓您輕鬆傳送和接收資料。
-* [共用調適型表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=en) – 使用調適型表單審閱機制讓一個或多個人員審閱表單。
+* [使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html?lang=zh-Hant) – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html?lang=zh-Hant)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
+* [前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=zh-Hant) – 通過使用前端部署管道部署，為以核心元件為基礎之最適化表單使用易於自訂的 BEM 型主題，以增強表單的外觀和風格。
+* [為以核心元件為基礎之最適化表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=zh-Hant) – 為以核心元件為基礎之最適化表單建立記錄，以提交供長期封存，採列印或文件格式。
+* [將最適化表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html?lang=zh-Hant) – 簡化資料提交作業，能夠將最適化表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
+* [使用將最適化表單另存為模板功能來提升表單建置效率](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html?lang=zh-Hant#save-an-adaptive-form-as-template-saving-adaptive-form-as-template) – 將最適化表單另存為模板，並在建置下一個最適化表單時重複使用模板，藉此簡化表單建置程序。
+* [連接 [!DNL Experience Manager Forms] 到支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-relational-database-configure-relational-database) – 輕鬆連接將 [!DNL Experience Manager Forms] 資料模型連接到支援 JDBC 的資料庫，讓您順暢讀寫資料。
+* [使用 Open API 3.0 與 REST 端點相整合](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30) – 將 [!DNL Experience Manager Forms] as a [!DNL Cloud Service] 表單資料模型連接到支援 Open API 規格版本 3.0 的 REST 端點，讓您輕鬆傳送和接收資料。
+* [共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=zh-Hant) – 使用最適化表單審閱機制讓一個或多個人員審閱表單。
 
 ### CIF 附加元件
 
@@ -314,7 +314,7 @@ _新功能_
 
 _新功能_
 
-* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=en) – RDE 讓開發人員可以快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
+* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=zh-Hant) – RDE 讓開發人員可以快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
 
    快速開發環境是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。使用命令列工具，可以快速將內容套件、套件組合、內容檔案、OSGI 設定或 Dispatcher 設定同步到 RDE。
 
@@ -332,8 +332,8 @@ _新功能_
 
 _新功能_
 
-* 使用者可以從 UI 下載[自訂 UI 測試](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/ui-testing.html?lang=en)的結果。
-* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=en) (RDE) 是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。
+* 使用者可以從 UI 下載[自訂 UI 測試](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/test-results/ui-testing.html?lang=zh-Hant)的結果。
+* [快速開發環境](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/rapid-development-environments.html?lang=zh-Hant) (RDE) 是一種新型雲端環境，用於以快速、一致和可擴展的方式來驗證在本機運作的程式碼在雲端是否也能正常運作。
    * RDE 使開發人員能夠快速解決問題並在 [!DNL Experience Manager] as a [!DNL Cloud Service] 部署新功能。
    * 使用命令列工具，開發人員可以快速將內容套件、套件組合、內容檔案、OSGi 設定或 Dispatcher 設定同步到 RDE。
 
@@ -388,11 +388,11 @@ _已知問題_
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2023 年 4 月 | [回報使用  [!DNL Analytics] 時出現表單資料欄位值和表單欄位驗證錯誤](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/forms-and-analytics/introduction.html) | 影片 | 了解如何使用標記和 [!DNL Adobe Analytics] 對最適化表單實作分析。此範例將引導您完成設定和實作步驟，以產生富有深入見解、內容為訪客如何與您表單互動的報告。 | AEM [!DNL Forms] |
 | 2023 年 4 月 | [整合 Experience Platform Data Collection 標記和 AEM](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-data-collection-tags/overview.html)。 | 影片 | 了解如何整合 Experience [!DNL Platform Data Collection] 標記和 Adobe Experience Manager。 | AEM [!DNL Sites] |
-| 2023 年 4 月 | [遠端 SPA - 概觀](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/spa-editor/remote-spa/overview.html?lang=en) | 影片 | 造訪此多部分教學課程，專門提供給希望使用 AEM SPA 編輯器來擴充內含可編輯 AEM 內容之現有 React (或 Next.js) 遠端 SPA 的開發人員。 | AEM CS |
+| 2023 年 4 月 | [遠端 SPA - 概觀](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/spa-editor/remote-spa/overview.html?lang=zh-Hant) | 影片 | 造訪此多部分教學課程，專門提供給希望使用 AEM SPA 編輯器來擴充內含可編輯 AEM 內容之現有 React (或 Next.js) 遠端 SPA 的開發人員。 | AEM CS |
 | 2023 年 4 月 | [網頁最佳化的影像交付 Java™ API](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/developing/advanced/web-optimized-image-delivery-java-apis.html) | 影片 | 了解如何使用 AEM as a Cloud Service 的網頁最佳化的影像交付 Java™ API 來開發高性能的 Web 體驗。 | AEM CS |
 | 2023 年 4 月 | [內容片段預覽](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/preview.html) | 影片 | 了解如何使用內容片段預覽，讓作者能快速了解內容變更如何影響您的 AEM Headless 體驗。 | AEM CS |
 | 2023 年 4 月 | [如何更新  [!DNL Apache]  和  [!DNL Dispatcher]  設定的基線集](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/local-development-environment-set-up/dispatcher-tools.html#how-to-update-the-baseline-set-of-apache-and-dispatcher-configurations) | 影片 | 了解如何更新或同步作為 Dispatcher 工具一部分的基線 Apache 和 Dispatcher 設定。此操作確保使用 Dispatcher SDK 設定來進行本機開發時不會受阻，並且 CM 管道不會失敗。 | AEM CS |
-| 2023 年 4 月 | [使用 OKTA 驗證 AEM 作者](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/authentication/okta-saml-integration.html?lang=en) | 影片 | 了解使用 OKTA 單一登入的各種配置設定。 | AEM 6.5 |
+| 2023 年 4 月 | [使用 OKTA 驗證 AEM 作者](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/authentication/okta-saml-integration.html?lang=zh-Hant) | 影片 | 了解使用 OKTA 單一登入的各種配置設定。 | AEM 6.5 |
 
 {style="table-layout:auto"}
 
@@ -408,7 +408,7 @@ _已知問題_
 | 2023 年 3 月 | [AEM as a Cloud Service 的 SSI/ESI 支援](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21610.html?lang=zh-Hant) | 新文章 | 了解 AEM as a Cloud Service 中 SSI/ESI 的支援狀態。 |
 | 2023 年 3 月 | [功能要求：在資產共用連結詳細檢視中新增下一個功能](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21657.html?lang=zh-Hant) | 新文章 | 了解 AEM as a Cloud Service 中 SSI/ESI 的支援狀態。 |
 | 2023 年 3 月 | [[!DNL mod_security]：無法上傳大型檔案/資產](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21662.html?lang=zh-Hant) | 新文章 | 了解如何修正客戶使用版本 9 [!DNL mod_security] 無法上傳大型檔案/資產的問題。 |
-| 2023 年 3 月 | [分送佇列因 _AccessDeniedException_&#x200B;阻塞。](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21668.html?lang=zh-Hant) | 新文章 | 了解如何修正作者的分送佇列因 _AccessDeniedException_ 而阻塞的錯誤。 |
+| 2023 年 3 月 | [分送佇列因 _AccessDeniedException_ 阻塞。](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21668.html?lang=zh-Hant) | 新文章 | 了解如何修正作者的分送佇列因 _AccessDeniedException_ 而阻塞的錯誤。 |
 | 2023 年 3 月 | [在資產共用連結詳細檢視中新增下一個功能](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21657.html?lang=zh-Hant) | 新文章 | 功能要求 ASSETS-21827 已記錄在工程部門。 |
 | 2023 年 3 月 | [AEM Assets 對選定檔案格式的支援](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21609.html?lang=zh-Hant) | 新文章 | 了解有關 AEM Assets 的文件格式支援問題的答案。 |
 | 2023 年 3 月 | [關於處理 Null 值的 AEM GraphQL 變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21792.html?lang=zh-Hant) | 新文章 | 了解最新的 GraphQL 實作改進，這些改進可能會導致未預期的行為。 |
@@ -445,8 +445,8 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資訊
 
-* 請參閱[Adobe Commerce 和 Magento Open Source 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html)以取得最新資訊。
-* 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=en)以存取個別的產品發行說明並確認可用性。
+* 請參閱 [Adobe Commerce 和 Magento Open Source 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html)以取得最新資訊。
+* 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
 >[!NOTE]
 >
@@ -457,8 +457,8 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [Adobe Developer App Builder](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/first-app/overview.html) | 影片 | 了解如何使用 [!DNL App Builder] 並與您的 Adobe Commerce 網站進行通訊。新的教學課程影片可協助建置您的第一個 [!DNL App Builder] 應用程式。 |
-| 2023 年 4 月 | [API Mesh 快速入門](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/api-mesh/getting-started-api-mesh.html) | 影片 | 了解如何在 [!DNL Adobe Commerce] 和 [!DNL Adobe App Builder] 上使用 API Mesh。了解如何安裝 [!DNL Adobe App Builder]、處理專案、建立 GraphQL 反向 Proxy 等。 <p>相關：新的 [entityId 範例](https://experienceleague.adobe.com/docs/commerce-merchant-services/catalog-service/mesh.html?lang=en)已新增到 _適用於目錄服務的 API Mesh_ 產品文件中。 |
-| 2023 年 4 月 | [Experience Platform 連接器事件](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html) | 產品文件 | 新增有關 Experience Platform 連接器的 [B2B 事件](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html#b2b-events)和[後台](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html#back-office-events)事件的文件。<p> [深入了解...](https://experienceleague.adobe.com/docs/commerce-admin/b2b/release-notes.html?lang=en) |
+| 2023 年 4 月 | [API Mesh 快速入門](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/adobe-developer-app-builder/api-mesh/getting-started-api-mesh.html) | 影片 | 了解如何在 [!DNL Adobe Commerce] 和 [!DNL Adobe App Builder] 上使用 API Mesh。了解如何安裝 [!DNL Adobe App Builder]、處理專案、建立 GraphQL 反向 Proxy 等。 <p>相關：新的 [entityId 範例](https://experienceleague.adobe.com/docs/commerce-merchant-services/catalog-service/mesh.html?lang=zh-Hant)已新增到 _適用於目錄服務的 API Mesh_ 產品文件中。 |
+| 2023 年 4 月 | [Experience Platform 連接器事件](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html) | 產品文件 | 新增有關 Experience Platform 連接器的 [B2B 事件](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html#b2b-events)和[後台](https://experienceleague.adobe.com/docs/commerce-merchant-services/experience-platform-connector/event-forwarding/events.html#back-office-events)事件的文件。<p> [深入了解...](https://experienceleague.adobe.com/docs/commerce-admin/b2b/release-notes.html?lang=zh-Hant) |
 
 {style="table-layout:auto"}
 
@@ -503,8 +503,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 4 月 | [查詢資料](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/data-management/query-data.html?lang=en) | 影片 | 了解如何使用查詢編輯器查詢資料。 | Campaign v8 |
-| 2023 年 4 月 | [將附件新增至郵件傳遞](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/add-attachments-to-an-email-delivery.html?lang=en) | 影片 | 了解如何將附件新增至郵件傳遞以及如何設定不同類型的電子郵件附件。 | Campaign v8 |
+| 2023 年 4 月 | [查詢資料](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/data-management/query-data.html?lang=zh-Hant) | 影片 | 了解如何使用查詢編輯器查詢資料。 | Campaign v8 |
+| 2023 年 4 月 | [將附件新增至郵件傳遞](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/add-attachments-to-an-email-delivery.html?lang=zh-Hant) | 影片 | 了解如何將附件新增至郵件傳遞以及如何設定不同類型的電子郵件附件。 | Campaign v8 |
 | 2023 年 4 月 | [設定 A/B 測試的傳遞](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/configure-deliveries-for-ab-testing.html) | 影片 | 了解如何設定 A/B 測試的傳遞。 | Campaign v8 |
 | 2023 年 4 月 | [設定登陸頁面](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/landing-pages/configure-landingpages.html) | 影片 | 了解如何建立並設定登陸頁面。 | Campaign v8 |
 | 2023 年 4 月 | [設定排程器活動](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/automating-with-workflows/configure-scheduler-activities.html) | 影片 | 了解如何在工作流程設定排程器活動。 | Campaign v8 |
@@ -533,7 +533,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html)
 * [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html)
-* [!DNL Campaign]控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
+* [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
 
@@ -604,7 +604,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].
 ### Marketo Engage 核心更新
 
 * 如需最新資訊，請參閱 [2023 年 3 月 - 最新發行資訊](https://experienceleague.adobe.com/docs/marketo/using/release-notes/current.html?lang=zh-Hant)
-* 如需最新發行排程資訊和發行說明，請參閱[!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
+* 如需最新發行排程資訊和發行說明，請參閱 [!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
 
 <!-- ### New Marketo tutorials and courses {#tutorials-marketo}
 
@@ -632,18 +632,18 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [設定 Fusion 練習檔案逐步解說](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html?lang=en) | 影片 | 已更新要下載的練習檔案。 |
-| 2023 年 4 月 | [建立和管理工作角色](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/organizational-setup/create-and-manage-job-roles.html?lang=en) | 影片 | 了解如何建立工作角色並將其與使用者相關聯以做出更好的指派。 |
-| 2023 年 4 月 | [通用連接器簡介](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/exercises/introduction-to-universal-connectors.html?lang=en) | 練習 | 讓您更了解如何使用 REST 通用連接器和傳回的資料。 |
-| 2023 年 4 月 | [安裝 Microsoft® Outlook 增益集](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/integrations/outlook/integrations-microsoft-outlook.html?lang=en) | 影片 | 了解如何安裝 Microsoft® Outlook Add-in。 |
-| 2023 年 4 月 | [以授權和存取層級設定使用者](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/organizational-setup/create-licenses-access-levels-and-job-roles.html?lang=en) | 影片 | 了解授權和存取層級如何控制使用者的存取權限。了解系統如何使用工作角色。 |
-| 2023 年 4 月 | [初始情境設計逐步解說](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/understand-the-basics/initial-scenario-design-walkthrough.html?lang=en) | 已更新的影片 | 在 [!DNL Workfront] 中為專案清單 CSV 檔案的每一列建立專案。 |
-| 2023 年 4 月 | [使群組和團隊與策略保持一致](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/establish-a-vision-and-strategy/align-groups-and-teams-to-the-strategy.html?lang=en) | 已更新的影片 | 在 Adobe Workfront 使群組和團隊與策略保持一致。 |
-| 2023 年 4 月 | [[!DNL Workfront] 目標](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/create-goals/understand-how-to-use-workfront-goals.html?lang=en) | 已更新的影片 | 了解如何瀏覽目標清單、圖表和目標校準。 |
+| 2023 年 4 月 | [設定 Fusion 練習檔案逐步解說](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html?lang=zh-Hant) | 影片 | 已更新要下載的練習檔案。 |
+| 2023 年 4 月 | [建立和管理工作角色](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/organizational-setup/create-and-manage-job-roles.html?lang=zh-Hant) | 影片 | 了解如何建立工作角色並將其與使用者相關聯以做出更好的指派。 |
+| 2023 年 4 月 | [通用連接器簡介](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/exercises/introduction-to-universal-connectors.html?lang=zh-Hant) | 練習 | 讓您更了解如何使用 REST 通用連接器和傳回的資料。 |
+| 2023 年 4 月 | [安裝 Microsoft® Outlook 增益集](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/integrations/outlook/integrations-microsoft-outlook.html?lang=zh-Hant) | 影片 | 了解如何安裝 Microsoft® Outlook Add-in。 |
+| 2023 年 4 月 | [以授權和存取層級設定使用者](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/organizational-setup/create-licenses-access-levels-and-job-roles.html?lang=zh-Hant) | 影片 | 了解授權和存取層級如何控制使用者的存取權限。了解系統如何使用工作角色。 |
+| 2023 年 4 月 | [初始情境設計逐步解說](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/understand-the-basics/initial-scenario-design-walkthrough.html?lang=zh-Hant) | 已更新的影片 | 在 [!DNL Workfront] 中為專案清單 CSV 檔案的每一列建立專案。 |
+| 2023 年 4 月 | [使群組和團隊與策略保持一致](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/establish-a-vision-and-strategy/align-groups-and-teams-to-the-strategy.html?lang=zh-Hant) | 已更新的影片 | 在 Adobe Workfront 使群組和團隊與策略保持一致。 |
+| 2023 年 4 月 | [[!DNL Workfront] 目標](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/create-goals/understand-how-to-use-workfront-goals.html?lang=zh-Hant) | 已更新的影片 | 了解如何瀏覽目標清單、圖表和目標校準。 |
 
 {style="table-layout:auto"}
 
-請參閱[[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html)頁面，以取得所有產品的最新資訊匯總。
+請參閱 [[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html)頁面，以取得所有產品的最新資訊匯總。
 
 +++
 
@@ -689,8 +689,8 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4月15日發行版本)觀眾促銷活動現在可以使用「手動CPM」競標策略。 您可以在子廣告群組設定中設定出價。<br><br>CPM促銷活動不提供最佳化支援。 |
-| [!UICONTROL Recommendations] | 6個新([!DNL Google Ads] 建議可從 [!UICONTROL 前瞻分析與報表] > [!UICONTROL Recommendations]:<ul><li>[!UICONTROL 回應式搜尋改善廣告強度]:改善回應式搜尋廣告廣告強度的建議</li><li>[!UICONTROL 將本機促銷活動升級至效能上限]:將舊版本機促銷活動升級至效能上限促銷活動</li><li>[!UICONTROL 將智慧型購物促銷活動升級至效能上限]:將舊版智慧型購物促銷活動升級至效能上限促銷活動</li><li>[!UICONTROL 預測集目標ROAS]:在預測會增加流量的季節性事件之前提高預算，並將競標策略從 [!DNL Maximize Conversion Value] to [!DNL Target ROAS]</li><li>[!UICONTROL 將目標CPA的出價提高到過低]:提高 [!DNL Target CPA] 值過低且轉換次數少或沒有轉換時，建議的量</li><li>[!UICONTROL 顯示展開選擇加入]:更新促銷活動以使用顯示擴展來擴展觸及</li></ul>因為新增和移除資產、變更促銷活動類型以及變更預算和競標策略都可能影響效能，我們建議您與Adobe客戶團隊討論每個建議的優點和缺點，以便您做出明智的決策。 |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4 月 15 日發行) 對象行銷活動現在可以使用「手動 CPM」競標策略。您可以在子廣告群組設定中設定出價。<br><br>CPM促銷活動不提供最佳化支援。 |
+| [!UICONTROL Recommendations] | 六個新 ([!DNL Google Ads] 建議可從 [!UICONTROL Insights &amp; Reports] > [!UICONTROL Recommendations] 取得：<ul><li>[!UICONTROL 回應式搜尋提高廣告強度]：關於提高回應式搜尋廣告之廣告強度的建議</li><li>[!UICONTROL 將本地行銷活動升級到最高成效]：將舊版本地行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 將智慧購物行銷活動升級到最高成效]：將舊版智慧購物行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 預測設定的 Target ROAS]：在預計會增加流量的季節性活動之前提高預算，並將競標策略從[!DNL Maximize Conversion Value] 變更到 [!DNL Target ROAS]</li><li>[!UICONTROL 提高太低的 Target CPA 競標]：當 [!DNL Target CPA] 太低且很少或沒有轉換時，按建議量提高。</li><li>[!UICONTROL 顯示擴展選擇加入]：更新行銷活動以使用顯示擴展來擴大觸及率</li></ul>由於新增和刪除資產、變更行銷活動類型以及變更預算和競標策略都會影響成效，因此我們建議您與 Adobe 客戶團隊討論每項建議的利弊，以便您做出明智的決定。 |
 
 {style="table-layout:auto"}
 
