--- a/c-legacy-releases/2023/01112023.md
+++ b/c-legacy-releases/2023/01112023.md
@@ -7,13 +7,13 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: 22e2e4b0-b76a-429e-be83-b8a3c9f6e455
 source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4026'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
-# Experience Cloud版本注意事項 — 2023年1月
+# Experience Cloud 發行說明 - 2023 年 1 月
 
 ![橫幅](assets/release-notes-header.png)
 
